# dftt_timecode

./: .gitignore  CHANGELOG.md  ChangeLog.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflow/: publish-to-pypi.yml
.github/workflows/: docs.yml  publish-to-pypi.yml
dftt_timecode/: __init__.py  core.py  dispatch.py  error.py  logging_config.py  pattern.py
dftt_timecode/core/: dftt_timecode.py  dftt_timerange.py  dtff_timerange.py  timecode_parser.py
docs/: .gitignore  Makefile  README.md  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  user_guide.rst
docs/_static/: switcher.json
docs/_templates/: language-switcher.html
docs/api/: dftt_timecode.rst  dftt_timerange.rst  error.rst
docs/locale/zh_CN/LC_MESSAGES/: README.mo  README.po  changelog.mo  changelog.po  contributing.mo  contributing.po  index.mo  index.po  installation.mo  installation.po  quickstart.mo  quickstart.po  user_guide.mo  user_guide.po
docs/locale/zh_CN/LC_MESSAGES/api/: dftt_timecode.mo  dftt_timecode.po  dftt_timerange.mo  dftt_timerange.po  error.mo  error.po
test/: test_dftt_timecode.py  test_dftt_timerange.py  test_logging_config.py
